# NetGent

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/: config.py  main.py
src/netgent/agents/: audio.py  llm.py  vision.py
src/netgent/core/: agent_wrapper.py  agents.py  callbacks.py  messages.py  networks.py  prompts.py  state.py
src/netgent/functional/: agents.py  parallel.py  sequential.py
src/netgent/template/: netgent_start.py  starter.py
src/netgent/workflows/: parallel.py  sequential.py
tests/: test_core.py  test_main.py
