# Start of Selection
[tool.poetry]
name = "netgent"
version = "0.1.0"
description = "NetGent (Network Agent) is a functional API to design multi-agent graph systems."
authors = ["Octavio Pavon <octaviopavon7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
langchain-openai = "^0.2.2"
langchain-groq = "^0.2.0"
langchain-anthropic = "^0.2.3"
langchain-google-vertexai = "^2.0.5"
python-dotenv = "^1.0.1"
langgraph = "^0.2.38"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
# End of Selection
